添加了 公共less样式demo 添加了 全局事件demo 添加了 翻页插件 修改了 scroll样式

--- a/vuecli-demo/common/css/publick.less
+++ b/vuecli-demo/common/css/publick.less
@@ -4,6 +4,12 @@
 @footerheight:210px;
 @min-width:1080px;
 @bodybgcolor:rgba(0, 0, 0, 0.4);
+@bodyheaderbgcolor:rgba(255,255,255, 0.4);
+@bodyfooterbgcolor:rgba(255,255,255, 0.4);
 @bodywrapbgcolor:rgba(0, 120, 150, 0.4);
 @homeleftbgcolor:rgba(0, 120, 150, 0.4);
 @homerightbgcolor:rgba(0, 120, 150, 0.4);
+
+.changepagewrap{
+    text-align: center;
+}
